objects/tfn_IBRA_Region__c.object
<CustomObject>
    <fields>
        <fullName>tfn_IBRA_Region_Area_Percentage__c</fullName>
        <label>IBRA Region Area Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_IBRA_Region_Area__c</fullName>
        <label>IBRA Region Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tfn_Locality__c</fullName>
        <label>Locality</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <label>IBRA Region</label>
    <nameField>
        <label>IBRA Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IBRA Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>